--- a/frontend/src/style/ProductListScreen.css
+++ b/frontend/src/style/ProductListScreen.css
@@ -1,11 +1,20 @@
 
 
 
-  .product-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Four columns */
-    gap: 20px; /* Gap between the product cards */
-    justify-content: space-around;
-  }
-  
-  
+/* styles/ProductListScreen.css */
+.products-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0;
+  width: 100%;
+}
+
+.products-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 5rem;
+  width: 100%;
+  max-width: 1300px; /* Adjust as needed */
+  box-sizing: border-box;
+}
